--- a/app/src/main/res/layout/activity_nutrition.xml
+++ b/app/src/main/res/layout/activity_nutrition.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Nutrition">
-    <TextView
-        android:id="@+id/nutritionTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="185dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="185dp"
-        android:layout_marginBottom="664dp"
-        android:text="Nutrition"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <ImageButton
-        android:id="@+id/backButtonNutrition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginBottom="685dp"
-        android:rotation="90"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/nutritionTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/arrow_down_float" />
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".Nutrition">
+
+
+<Button
+    android:id="@+id/button2"
+    android:layout_width="129dp"
+    android:layout_height="70dp"
+    android:layout_marginStart="141dp"
+    android:layout_marginEnd="141dp"
+    android:layout_marginBottom="62dp"
+    android:text="Quick Add"
+    tools:layout_editor_absoluteX="148dp"
+    tools:layout_editor_absoluteY="648dp" />
+
+
+<com.google.android.material.textfield.TextInputEditText
+    android:layout_width="142dp"
+    android:layout_height="47dp"
+    android:hint="Input Calories"
+    tools:layout_editor_absoluteX="134dp"
+    tools:layout_editor_absoluteY="592dp" />
+
+<ImageButton
+    android:id="@+id/backButtonNutrition"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="102dp"
+    android:layout_marginBottom="685dp"
+    android:rotation="90"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@android:drawable/arrow_down_float" />
 </androidx.constraintlayout.widget.ConstraintLayout>
