--- a/app/src/main/res/layout/activity_lifting.xml
+++ b/app/src/main/res/layout/activity_lifting.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
-            android:text="Enter Your Lifts"
+            android:text="Lifting Tracker"
             android:textSize="24sp" />
 
         <EditText
