New Color Scheme

--- a/app/src/main/res/layout/activity_lifting.xml
+++ b/app/src/main/res/layout/activity_lifting.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundcolor"
     tools:context=".Lifting">
     <ImageButton
         android:id="@+id/backButtonLifting"
@@ -19,47 +20,63 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/arrow_down_float" />
 
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lifting"
+        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp">
-
-        <TextView
-            android:id="@+id/textViewTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="16dp"
-            android:text="Lifting Tracker"
-            android:textSize="24sp" />
+        android:paddingTop="100dp"
+        android:paddingStart="50dp"
+        android:paddingEnd="50dp"
+        android:textColor="@color/white">
 
         <EditText
             android:id="@+id/editTextLiftName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Lift Name"
-            android:inputType="text" />
+            android:textColorHint="@color/white"
+            android:inputType="text"
+            android:textColor="@color/white"/>
 
         <EditText
             android:id="@+id/editTextSets"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Sets"
-            android:inputType="number" />
+            android:textColorHint="@color/white"
+            android:inputType="number"
+            android:textColor="@color/white"/>
 
         <EditText
             android:id="@+id/editTextReps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Reps"
-            android:inputType="number" />
+            android:textColorHint="@color/white"
+            android:inputType="number"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/buttonAddLift"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/buttoncolor"
             android:text="Add Lift" />
 
         <LinearLayout
@@ -67,6 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:textColor="@color/white"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
