--- a/app/src/main/res/layout/activity_cardio.xml
+++ b/app/src/main/res/layout/activity_cardio.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundcolor"
     tools:context=".Cardio">
 
 
@@ -13,16 +14,16 @@
         android:id="@+id/cardioTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="185dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="185dp"
-        android:layout_marginBottom="664dp"
         android:text="Cardio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
 
 
     <TextView
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:text="Steps: 0"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +84,7 @@
         android:layout_marginEnd="141dp"
         android:layout_marginBottom="62dp"
         android:text="Pause"
+        android:background="@color/buttoncolor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
